--- a/B16 Ex03 MichaelKreimer 305597478 IdoPerry 036928646/Ex3.GarageLogic/Ex3.GarageLogic.csproj
+++ b/B16 Ex03 MichaelKreimer 305597478 IdoPerry 036928646/Ex3.GarageLogic/Ex3.GarageLogic.csproj
@@ -35,17 +35,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ElectricEngine.cs" />
-    <Compile Include="Engine.cs" />
-    <Compile Include="FuelEngine.cs" />
-    <Compile Include="MotorCycle.cs" />
-    <Compile Include="Car.cs" />
+    <Compile Include="ElectricVehicle.cs" />
+    <Compile Include="FuelVehicle.cs" />
+    <Compile Include="MotorCycleModels.cs" />
+    <Compile Include="CarModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tier.cs" />
-    <Compile Include="Truck.cs" />
+    <Compile Include="TruckModels.cs" />
     <Compile Include="ValueOutOfRangeException.cs" />
     <Compile Include="Vehicle.cs" />
     <Compile Include="VehicleFactory.cs" />
+    <Compile Include="VehicleModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
