--- a/B16 Ex03 MichaelKreimer 305597478 IdoPerry 036928646/Ex3.GarageLogic/Ex3.GarageLogic.csproj
+++ b/B16 Ex03 MichaelKreimer 305597478 IdoPerry 036928646/Ex3.GarageLogic/Ex3.GarageLogic.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="ElectricVehicle.cs" />
     <Compile Include="FuelVehicle.cs" />
+    <Compile Include="Garage.cs" />
     <Compile Include="MotorCycleModels.cs" />
     <Compile Include="CarModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
