--- a/B16 Ex03 MichaelKreimer 305597478 IdoPerry 036928646/Ex03.ConsoleUi/Ex03.ConsoleUi.csproj
+++ b/B16 Ex03 MichaelKreimer 305597478 IdoPerry 036928646/Ex03.ConsoleUi/Ex03.ConsoleUi.csproj
@@ -38,6 +38,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Menus.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
   <ItemGroup>
