mostly garage changes also added max air pressure property in Tire

--- a/B16 Ex03 MichaelKreimer 305597478 IdoPerry 036928646/Ex3.GarageLogic/Ex03.GarageLogic.csproj
+++ b/B16 Ex03 MichaelKreimer 305597478 IdoPerry 036928646/Ex3.GarageLogic/Ex03.GarageLogic.csproj
@@ -41,7 +41,7 @@
     <Compile Include="MotorCycleModels.cs" />
     <Compile Include="CarModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tier.cs" />
+    <Compile Include="Tire.cs" />
     <Compile Include="TruckModels.cs" />
     <Compile Include="ValueOutOfRangeException.cs" />
     <Compile Include="Vehicle.cs" />
