--- a/B16 Ex03 MichaelKreimer 305597478 IdoPerry 036928646/Ex03.ConsoleUi/Ex03.ConsoleUi.csproj
+++ b/B16 Ex03 MichaelKreimer 305597478 IdoPerry 036928646/Ex03.ConsoleUi/Ex03.ConsoleUi.csproj
@@ -38,8 +38,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller.cs" />
     <Compile Include="Menus.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="UI.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
