--- a/B16 Ex03 MichaelKreimer 305597478 IdoPerry 036928646/Ex3.GarageLogic/Ex03.GarageLogic.csproj
+++ b/B16 Ex03 MichaelKreimer 305597478 IdoPerry 036928646/Ex3.GarageLogic/Ex03.GarageLogic.csproj
@@ -35,6 +35,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Costumer.cs" />
     <Compile Include="ElectricVehicle.cs" />
     <Compile Include="FuelVehicle.cs" />
     <Compile Include="Garage.cs" />
