--- a/B16 Ex03 MichaelKreimer 305597478 IdoPerry 036928646/Ex3.GarageLogic/Ex03.GarageLogic.csproj
+++ b/B16 Ex03 MichaelKreimer 305597478 IdoPerry 036928646/Ex3.GarageLogic/Ex03.GarageLogic.csproj
@@ -35,15 +35,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CarProperties.cs" />
+    <Compile Include="ElectricCar.cs" />
     <Compile Include="Costumer.cs" />
+    <Compile Include="ElectricMotorCycle.cs" />
     <Compile Include="ElectricVehicle.cs" />
+    <Compile Include="FuelMotorCycle.cs" />
     <Compile Include="FuelVehicle.cs" />
     <Compile Include="Garage.cs" />
-    <Compile Include="MotorCycleModels.cs" />
-    <Compile Include="CarModels.cs" />
+    <Compile Include="MotorCycleProperties.cs" />
+    <Compile Include="FuelCar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tire.cs" />
-    <Compile Include="TruckModels.cs" />
+    <Compile Include="FuelTruck.cs" />
+    <Compile Include="TruckProperties.cs" />
     <Compile Include="ValueOutOfRangeException.cs" />
     <Compile Include="Vehicle.cs" />
     <Compile Include="VehicleFactory.cs" />
