--- a/B16 Ex03 MichaelKreimer 305597478 IdoPerry 036928646/Ex3.GarageLogic/Ex03.GarageLogic.csproj
+++ b/B16 Ex03 MichaelKreimer 305597478 IdoPerry 036928646/Ex3.GarageLogic/Ex03.GarageLogic.csproj
@@ -41,6 +41,7 @@
     <Compile Include="ElectricMotorCycle.cs" />
     <Compile Include="ElectricVehicle.cs" />
     <Compile Include="FuelMotorCycle.cs" />
+    <Compile Include="FuelTypes.cs" />
     <Compile Include="FuelVehicle.cs" />
     <Compile Include="Garage.cs" />
     <Compile Include="GarageUtils.cs" />
