Finished Geting input for first Motorcycle option + refactor the methood to be a little bit more generic (Still Ugly)

--- a/B16 Ex03 MichaelKreimer 305597478 IdoPerry 036928646/Ex3.GarageLogic/Ex03.GarageLogic.csproj
+++ b/B16 Ex03 MichaelKreimer 305597478 IdoPerry 036928646/Ex3.GarageLogic/Ex03.GarageLogic.csproj
@@ -37,7 +37,7 @@
   <ItemGroup>
     <Compile Include="CarProperties.cs" />
     <Compile Include="ElectricCar.cs" />
-    <Compile Include="Costumer.cs" />
+    <Compile Include="Customer.cs" />
     <Compile Include="ElectricMotorCycle.cs" />
     <Compile Include="ElectricVehicle.cs" />
     <Compile Include="FuelMotorCycle.cs" />
